--- a/public/css/add_client.css
+++ b/public/css/add_client.css
@@ -7,18 +7,17 @@
 
 body {
     background-color: #eafdf8;
+    font-family: BalsamiqSansBold;
 }
 
 #header1{
     margin-left: 1400px;
-    margin-right: 10px;
-    margin-top: 20px;
+    margin-top: 30px;
 }
 
 #header2{
     margin-left: 1400px;
-    margin-right: 10px;
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 #back{
@@ -26,60 +25,117 @@ body {
     float: left;
 }
 
+div.contenedor{
+    float: center; width: 20%;
+    height: 500px;
+    margin-left: 600px;
+    border-color: #f2edbe;
+    border-style:solid;
+    background-color: #2a628f;
+    opacity: 80%;
+    text-align: center;
+}
+
+#img{
+    margin-top: 20px;
+    margin-right: 30px;
+}
+
 #id_card{
     background-color: #aa4465;
     color: white;
+    width: 170px;
+    height: 25px;
+    padding: 5px;
+    border-style: solid;
+    border-color: black;
+    font-size: 13px;
+    box-shadow: 5px 5px #000000;
+    font-family: BalsamiqSansBold;
 }
 
 #last_name{
     background-color: #eafdf8;
     color: black;
+    width: 170px;
+    height: 25px;
+    padding: 5px;
+    margin-top: 10px;
+    border-style: solid;
+    border-color: black;
+    font-size: 13px;
+    box-shadow: 5px 5px #000000;
+    font-family: BalsamiqSansBold;
 }
 
 #first_name{
     background-color: #f2edbe;
     color:black;
+    width: 170px;
+    height: 25px;
+    padding: 5px;
+    border-style: solid;
+    border-color: black;
+    margin-top: 10px;
+    font-size: 13px;
+    box-shadow: 5px 5px #000000;
+    font-family: BalsamiqSansBold;
 }
 
 #phone{
     background-color: #30323d;
     color:white;
+    width: 170px;
+    border-style: solid;
+    border-color: black;
+    height: 25px;
+    padding: 5px;
+    margin-top: 10px;
+    font-size: 13px;
+    box-shadow: 5px 5px #000000;
+    font-family: BalsamiqSansBold;
 }
 
 #email{
     background-color: #eafdf8;
     color:black;
+    width: 170px;
+    height: 25px;
+    padding: 5px;
+    border-style: solid;
+    border-color: black;
+    margin-top: 10px;
+    font-size: 13px;
+    box-shadow: 5px 5px #000000;
+    font-family: BalsamiqSansBold;
 }
 
 #address{
     background-color: #23395b;
-    color:white
-}
-
-div.contenedor{
-    margin-top: 100px;
-    margin-left: 620px;
-    border-color: #f2edbe;
-    border-style:solid;
-    width: 225px;
-    height: 400px;
-    background-color: #2a628f;
-    text-align: center;
-    padding: 10px;
-}
-
-input{
-    width: 165;
-    height: 29;
-    margin-bottom: 10px;
-    text-align: center;
+    color:white;
+    width: 170px;
+    height: 25px;
+    padding: 5px;
+    border-style: solid;
+    border-color: black;
+    margin-top: 10px;
+    font-size: 13px;
+    box-shadow: 5px 5px #000000;
+    font-family: BalsamiqSansBold;
 }
 
 button{
     width: 200px;
-    height: 35px;
+    height: 40px;
+    border-style: solid;
+    border-color: black;
+    margin-top: 20px;    
+    padding: 5px;
     background-color: #3d9796;
     border-style: solid;
     border-color: black;
     color: white;
+    font-size: 15px;
+    box-shadow: 5px 5px #000000;
+    font-family: BalsamiqSansBold;
 }
