--- a/public/css/add_movie.css
+++ b/public/css/add_movie.css
@@ -7,89 +7,123 @@
 
 body {
     background-color: #eafdf8;
+    font-family: BalsamiqSansBold;
 }
 
-#title{
-    background-color: #aa4465;
-    color: white;
-    text-align: center;
+#header1{
+    margin-left: 1400px;
+    margin-top: 30px;
 }
 
-#year{
-    background-color: #f2edbe;  
-    color: black;
-    text-align: center;
+#header2{
+    margin-left: 1400px;
+    margin-top: 10px;
 }
 
-#duration{
-    background-color: #eafdf8;
-    color: black;
-    text-align: center;
+#back{
+    margin: 10px;
+    float: left;
 }
 
-#unit_price{
-    background-color: #30323d;
-    color:white;
+div.contenedor{
+    float: left; width: 45%;
+    height: 500px;
+    margin-left: 400px;
+    border-color: #f2edbe;
+    border-style:solid;
+    background-color: #2a628f;
+    opacity: 80%;
     text-align: center;
 }
 
 #container1{
-    float:left; width:45%;
-    height: 100px;
+    float:left; width: 30%;
+    height: 130px;
+    margin-left: 100px;
+    margin-right: 30px;
     background:#2a628f;
     border-style:solid;
     border-radius: 25px;
     border-color: black;
     text-align:center;
-    margin-left: 30px;
+    margin-bottom: 20px;
 }
 
 #container2{
-    margin-left: 20px;
-    float:left; width:45%;
+    float: left; width:50%;
     height: 100px;
     text-align:left;
     color:black;
 }
 
 #container3{
-    float:left; width:45%;
-    height: 100px;    
+    float:left; width: 30%;
+    height: 130px;
+
+    margin-right: 30px;
     background:#2a628f;
-    border-style: solid;
-    border-color: black;
+    border-style:solid;
     border-radius: 25px;
-    text-align:left;
+    border-color: black;
+    text-align:center;
+    margin-bottom: 20px;
 }
 
 #container4{
-    float:left; width:45%;
-    height: 100px;
-    background:#eafdf8;
+    float:left; width: 40%;
+    height: 130px;
+    margin-left: 20px;
+    background:#2a628f;
+    border-style:solid;
     border-radius: 25px;
-    border-style: solid;
     border-color: black;
-    text-align:left;
-    color:black;
-}
-
-input{
-    width: 186px;
-    height: 27px;   
+    text-align:center;
+    margin-bottom: 20px;
 }
 
 select{
+    margin-top: 20px;
     width: 186px;
     height: 27px;
 }
 
-div.contenedor{
-    margin-top: 120px;
-    margin-left: 450px;
-    border-color: #f2edbe;
-    border-style:solid;
-    width: 580px;
-    height: 500px;
-    background-color: #2a628f;
+#title{
+    background-color: #aa4465;
+    color: white;
     text-align: center;
+    width: 186px;
+    height: 27px;
+    margin-top: 10px;
 }
+
+#year{
+    background-color: #f2edbe;  
+    color: black;
+    text-align: center;
+    width: 200px;
+    height: 27px;
+    margin-bottom: 10px;
+}
+
+#duration{
+    background-color: #eafdf8;
+    color: black;
+    text-align: center;
+    width: 200px;
+    height: 27px;
+    margin-bottom: 10px;
+}
+
+#unit_price{
+    background-color: #30323d;
+    color:white;
+    text-align: center;
+    width: 200px;
+    height: 27px;
+    margin-bottom: 10px;
+}
+
+
+
+
+
