--- a/public/css/edit_movie.css
+++ b/public/css/edit_movie.css
@@ -4,3 +4,34 @@
     src: url("/fonts/balsamiqsansbold.woff");
     src: url("/fonts/balsamiqsansbold.woff2");
 }
+
+body {
+    background-color: #eafdf8;
+    font-family: BalsamiqSansBold;
+}
+
+#header1{
+    margin-left: 1400px;
+    margin-top: 30px;
+}
+
+#header2{
+    margin-left: 1400px;
+    margin-top: 10px;
+}
+
+#back{
+    margin: 10px;
+    float: left;
+}
+
+div.contenedor{
+    float: left; width: 18%;
+    height: 430px;
+    margin-top: 40px;
+    margin-left: 600px;
+    border-color: #f2edbe;
+    border-style:solid;
+    background-color: #2a628f;
+    text-align: center;
+}
