--- a/public/css/search_loans.css
+++ b/public/css/search_loans.css
@@ -9,10 +9,14 @@ body {
     background-color: #eafdf8;
 }
 
-#header{
+#header1{
     margin-left: 1400px;
-    margin-right: 10px;
-    margin-top: 20px;
+    margin-top: 30px;
+}
+
+#header2{
+    margin-left: 1400px;
+    margin-top: 10px;
 }
 
 #back{
@@ -20,16 +24,52 @@ body {
     float: left;
 }
 
+div.contenedor{
+    margin-left: 450px;
+    border-color: #f2edbe;
+    border-style:solid;
+    width: 650px;
+    height: 600px;
+    background-color: #2a628f;
+    text-align: center;
+    opacity: 80%;
+}
+
+#img{
+    margin-top: 20px;
+    margin-right: 20px;
+}
+
 #search{
     width: 278px;
     height: 25px;
     text-align: left;
     padding-left: 10px;
+    border-radius: 25px;
+    font-size: 13px;
+    font-family: BalsamiqSansBold;
 }
 
 select{
-    width: 109px;
+    width: 100px;
     height: 27px;
+    font-size: 13px;
+    font-family: BalsamiqSansBold;
+}
+
+#container1{
+    float: left; width: 30;
+    margin-left: 110px;
+}
+
+#container2{
+    float: left; width: 30;
+    margin-left: 10px;
+}
+
+#container3{
+    float: left; width: 30;
+    margin-left: 10px;
 }
 
 #field_1{
@@ -41,6 +81,8 @@ select{
     border-color: black;
     margin-top: 10px;
     text-align: left;
+    font-size: 13px;
+    font-family: BalsamiqSansBold;
 }
 
 #field_2{
@@ -52,6 +94,8 @@ select{
     border-color: black;
     margin-top: 10px;
     text-align: left;
+    font-size: 13px;
+    font-family: BalsamiqSansBold;
 }
 
 #field_3{
@@ -63,6 +107,8 @@ select{
     border-color: black;
     margin-top: 10px;
     text-align: left;
+    font-size: 13px;
+    font-family: BalsamiqSansBold;
 }
 
 #field_4{
@@ -74,6 +120,8 @@ select{
     border-color: black;
     margin-top: 10px;
     text-align: left;
+    font-size: 13px;
+    font-family: BalsamiqSansBold;
 }
 
 #field_5{
@@ -85,6 +133,8 @@ select{
     border-color: black;
     margin-top: 10px;
     text-align: left;
+    font-size: 13px;
+    font-family: BalsamiqSansBold;
 }
 
 #field_6{
@@ -96,6 +146,8 @@ select{
     border-color: black;
     margin-top: 10px;
     text-align: left;
+    font-size: 13px;
+    font-family: BalsamiqSansBold;
 }
 
 #field_7{
@@ -107,6 +159,8 @@ select{
     border-color: black;
     margin-top: 10px;
     text-align: left;
+    font-size: 13px;
+    font-family: BalsamiqSansBold;
 }
 
 #field_8{
@@ -118,15 +172,8 @@ select{
     border-color: black;
     margin-top: 10px;
     text-align: left;
+    font-size: 13px;
+    font-family: BalsamiqSansBold;
 }
 
-div.contenedor{
-    margin-top: 120px;
-    margin-left: 450px;
-    border-color: #f2edbe;
-    border-style:solid;
-    width: 650px;
-    height: 550px;
-    background-color: #2a628f;
-    text-align: center;
-}
+
