--- a/views/search_client.ejs
+++ b/views/search_client.ejs
@@ -6,51 +6,84 @@
 </head>
 
 <body>
-
-    <form name="header" action="/admin/cart" method="get">
+    <form id="header1" name="header1" action="/admin/cart" method="get">
         <input type="image" src="/images/icons/shopping_cart.png" width="30" height="30" />
     </form>    
 
-    <form name="header" action="/logout" method="post">
+    <form id="header2" name="header2" action="/logout" method="post">
         <input type="image" src="/images/icons/exit.png" width="30" height="30" />
-    </form>    
+    </form>     
 
     <div class="contenedor">
         <form action="/admin/customers" method="get">
-            <input type="image" id="back" src="/images/icons/go_back.png" width="24" height="24"> 
-        </form>
+            <input type="image" src="/images/icons/go_back.png" id="back" width="30" height="30"/>    
+        </form>    
 
         <center>
-            <img src="/images/titles/search_customer.png" width="307" height="120">        
+            <img src="/images/titles/search_customer.png" id="img" width="340" height="130">        
         </center>
 
-        <form>
+        <article id="container1">
             <input type="image" src="/images/icons/search_icon.png" width="15" height="15"> 
-            <input type="text" id="search" placeholder="search customers">
-            <select id="by">
-                <option value="">By</option>
-                <option value="first_name">First name</option>
-                <option value="last_name">Last name</option>
-                <option value="email">Email</option>                
-                <option value="phone">Phone</option>
-            </select><br> 
-            <input type="text" id="field_1" class="field left" readonly>
-            <input type="image" id=view_edit formaction="edit_client.html" src="/images/icons/view_edit.png" width="24" height="24"> <br>
-            <input type="text" id="field_2" class="field left" readonly>
-            <input type="image" id=view_edit formaction="edit_client.html" src="/images/icons/view_edit.png" width="24" height="24"> <br>
-            <input type="text" id="field_3" class="field left" readonly>
-            <input type="image" id=view_edit formaction="edit_client.html" src="/images/icons/view_edit.png" width="24" height="24"> <br>
-            <input type="text" id="field_4" class="field left" readonly>
-            <input type="image" id=view_edit formaction="edit_client.html" src="/images/icons/view_edit.png" width="24" height="24"> <br>
-            <input type="text" id="field_5" class="field left" readonly>
-            <input type="image" id=view_edit formaction="edit_client.html" src="/images/icons/view_edit.png" width="24" height="24"> <br>
-            <input type="text" id="field_6" class="field left" readonly>
-            <input type="image" id=view_edit formaction="edit_client.html" src="/images/icons/view_edit.png" width="24" height="24"> <br>
-            <input type="text" id="field_6" class="field left" readonly>
-            <input type="image" id=view_edit formaction="edit_client.html" src="/images/icons/view_edit.png" width="24" height="24"> <br>
-            <input type="text" id="field_8" class="field left" readonly>
-            <input type="image" id=view_edit formaction="edit_client.html" src="/images/icons/view_edit.png" width="24" height="24"> <br>
-        </form>
+        </article>
+
+        <article id="container2">
+            <form action="" method="post">
+                <input type="text" name="search" id="search" placeholder="search customers">
+            </form>
+        </article>
+
+        <article id="container3">
+            <form action="" method="post">
+                <select id="by" name="by">
+                    <option value="">By</option>
+                    <option value="first_name">First name</option>
+                    <option value="last_name">Last name</option>
+                    <option value="email">Email</option>                
+                    <option value="phone">Phone</option>
+                </select><br> 
+            </form>
+        </article>
+
+        <form action="/customers/edit" method="get">        
+            <input type="text" id="field_1" name="field_1" class="field left" readonly>
+            <input type="image" id="view_edit1" name="view_edit1" src="/images/icons/view_edit.png" width="24" height="24">
+        </form>    
+
+        <form action="/customers/edit" method="get">        
+            <input type="text" id="field_2" name="field_2" class="field left" readonly>
+            <input type="image" id="view_edit2" name="view_edit2" src="/images/icons/view_edit.png" width="24" height="24"> 
+        </form>    
+
+        <form action="/customers/edit" method="get">        
+            <input type="text" id="field_3" name="field_3" class="field left" readonly>        
+            <input type="image" id="view_edit3" name="view_edit3" src="/images/icons/view_edit.png" width="24" height="24"> 
+        </form>    
+
+        <form action="/customers/edit" method="get">        
+            <input type="text" id="field_4" name="field_4" class="field left" readonly>
+            <input type="image" id="view_edit4" name="view_edit4" src="/images/icons/view_edit.png" width="24" height="24"> 
+        </form>    
+
+        <form action="/customers/edit" method="get">        
+            <input type="text" id="field_5" name="field_5" class="field left" readonly>        
+            <input type="image" id="view_edit5" name="view_edit5" src="/images/icons/view_edit.png" width="24" height="24"> 
+        </form>    
+
+        <form action="/customers/edit" method="get">        
+            <input type="text" id="field_6" name="field_6" class="field left" readonly>        
+            <input type="image" id="view_edit6" name="view_edit6" src="/images/icons/view_edit.png" width="24" height="24">
+        </form>    
+
+        <form action="/customers/edit" method="get">        
+            <input type="text" id="field_7" name="field_7" class="field left" readonly>
+            <input type="image" id="view_edit7" name="view_edit7" src="/images/icons/view_edit.png" width="24" height="24"> 
+        </form>    
+
+        <form action="/customers/edit" method="get">        
+            <input type="text" id="field_8" name="field_8" class="field left" readonly>
+            <input type="image" id="view_edit8" name="view_edit8" src="/images/icons/view_edit.png" width="24" height="24"> 
+        </form>    
     </div>
 </body>
 </html>
