--- a/views/search_loans.ejs
+++ b/views/search_loans.ejs
@@ -12,55 +12,78 @@
 
     <form id="header2" name="header2" action="/logout" method="post">
         <input type="image" src="/images/icons/exit.png" width="30" height="30" />
-    </form>    
+    </form>     
 
-    <div class="contenedor" action="/admin/loan" method="get">
+    <div class="contenedor">
         <form action="/admin/loans" method="get">
-            <input type="image" id="back" src="/images/icons/go_back.png" width="24" height="24"> 
-        </form>
+            <input type="image" src="/images/icons/go_back.png" id="back" width="30" height="30"/>    
+        </form>    
 
         <center>
-            <img src="/images/titles/search_loans.png" width="307" height="120">        
+            <img src="/images/titles/search_loans.png" id="img" width="340" height="130">        
         </center>
 
-        <form>
-            <input type="text" id="search" placeholder="search loans">
-            <select id="by">
-                <option value="">By</option>
-                <option value="loan_id">Loan id</option>
-                <option value="date">Date</option>
-                <option value="client_id_card">Client id Card</option>
-                <option value="delivered">By</option>
-                <option value="expired">Loan id</option>
-                <option value="on_time">Date</option>
-            </select><br> 
-        </form>
+        <article id="container1">
+            <input type="image" src="/images/icons/search_icon.png" width="15" height="15"> 
+        </article>
 
-        <form>
-            <input type="text" id="field_1" class="field left" readonly>
-            <input type="image" id=view_edit formaction="loan_details.html" src="/images/icons/view_edit.png" width="24" height="24"> <br>
-    
-            <input type="text" id="field_2" class="field left" readonly>
-            <input type="image" id=view_edit formaction="loan_details.html" src="/images/icons/view_edit.png" width="24" height="24"> <br>
-    
-            <input type="text" id="field_3" class="field left" readonly>
-            <input type="image" id=view_edit formaction="loan_details.html" src="/images/icons/view_edit.png" width="24" height="24"> <br>
-    
-            <input type="text" id="field_4" class="field left" readonly>
-            <input type="image" id=view_edit formaction="loan_details.html" src="/images/icons/view_edit.png" width="24" height="24"> <br>
-    
-            <input type="text" id="field_5" class="field left" readonly>
-            <input type="image" id=view_edit formaction="loan_details.html" src="/images/icons/view_edit.png" width="24" height="24"> <br>
-    
-            <input type="text" id="field_6" class="field left" readonly>
-            <input type="image" id=view_edit formaction="loan_details.html" src="/images/icons/view_edit.png" width="24" height="24"> <br>
-    
-            <input type="text" id="field_6" class="field left" readonly>
-            <input type="image" id=view_edit formaction="loan_details.html" src="/images/icons/view_edit.png" width="24" height="24"> <br>
-    
-            <input type="text" id="field_8" class="field left" readonly>
-            <input type="image" id=view_edit formaction="loan_details.html" src="/images/icons/view_edit.png" width="24" height="24"> <br>
-        </form>
+        <article id="container2">
+            <form action="" method="post">
+                <input type="text" name="search" id="search" placeholder="search customers">
+            </form>
+        </article>
+
+        <article id="container3">
+            <form action="" method="post">
+                <select id="by" name="by">
+                    <option value="">By</option>
+                    <option value="first_name">First name</option>
+                    <option value="last_name">Last name</option>
+                    <option value="email">Email</option>                
+                    <option value="phone">Phone</option>
+                </select><br> 
+            </form>
+        </article>
+
+        <form action="/loans/edit" method="get">        
+            <input type="text" id="field_1" name="field_1" class="field left" readonly>
+            <input type="image" id="view_edit1" name="view_edit1" src="/images/icons/view_edit.png" width="24" height="24">
+        </form>    
+
+        <form action="/loans/edit" method="get">        
+            <input type="text" id="field_2" name="field_2" class="field left" readonly>
+            <input type="image" id="view_edit2" name="view_edit2" src="/images/icons/view_edit.png" width="24" height="24"> 
+        </form>    
+
+        <form action="/loans/edit" method="get">        
+            <input type="text" id="field_3" name="field_3" class="field left" readonly>        
+            <input type="image" id="view_edit3" name="view_edit3" src="/images/icons/view_edit.png" width="24" height="24"> 
+        </form>    
+
+        <form action="/loans/edit" method="get">        
+            <input type="text" id="field_4" name="field_4" class="field left" readonly>
+            <input type="image" id="view_edit4" name="view_edit4" src="/images/icons/view_edit.png" width="24" height="24"> 
+        </form>    
+
+        <form action="/loans/edit" method="get">        
+            <input type="text" id="field_5" name="field_5" class="field left" readonly>        
+            <input type="image" id="view_edit5" name="view_edit5" src="/images/icons/view_edit.png" width="24" height="24"> 
+        </form>    
+
+        <form action="/loans/edit" method="get">        
+            <input type="text" id="field_6" name="field_6" class="field left" readonly>        
+            <input type="image" id="view_edit6" name="view_edit6" src="/images/icons/view_edit.png" width="24" height="24">
+        </form>    
+
+        <form action="/loans/edit" method="get">        
+            <input type="text" id="field_7" name="field_7" class="field left" readonly>
+            <input type="image" id="view_edit7" name="view_edit7" src="/images/icons/view_edit.png" width="24" height="24"> 
+        </form>    
+
+        <form action="/loans/edit" method="get">        
+            <input type="text" id="field_8" name="field_8" class="field left" readonly>
+            <input type="image" id="view_edit8" name="view_edit8" src="/images/icons/view_edit.png" width="24" height="24"> 
+        </form>   
     </div>
 </body>
 </html>
