--- a/views/edit_movie.ejs
+++ b/views/edit_movie.ejs
@@ -20,47 +20,54 @@
         </form>    
 
         <center>
-            <img src="/images/titles/edit_movie.png" width="329" height="113">        
-        </center>            
-    </div>
+            <img src="/images/titles/new_movie.png" id="img" width="329" height="113">        
+        </center>     
 
-     <!--
+        <form action="" method="POST">
             <article id=container1>
-                <form>
-                    <select id="titles">
-                        <option value="">Titles</option>
-                    </select><br>
-                    <input type="text" id="title" class="field left" placeholder="Title" readonly><br>
-                </form>
+                <select id="titles" name="titles">
+                    <option value="">Titles</option>
+                </select><br>
+                <input type="text" id="title" name="title"class="field left" placeholder="Title" readonly><br>
+                <input type="image" src="/images/icons/mas.png" id="add" width="30" height="30"/>    
+                <input type="image" src="/images/icons/menos.png" id="minus" width="30" height="30"/>    
             </article>
     
             <article id=container2>
-                <input type="text" id="year" class="field left" placeholder="Year" readonly><br>
-                <input type="text" id="duration" class="field left" placeholder="Duration" readonly><br>
-                <input type="text" id="unit_price" class="field left" placeholder="Unit price" readonly><br>
+                <input type="text" id="year" name="year" class="field left" placeholder="Year" readonly><br>
+                <input type="text" id="duration" name="duration" class="field left" placeholder="Duration" readonly><br>
+                <input type="text" id="unit_price" name="unit_price" class="field left" placeholder="Unit price" readonly><br>
             </article>
     
             <br>
-    
 
             <article id=container3>
-                <form>
-                    <select id="oscars">
-                        <option value="">Oscars</option>
-                    </select><br>
-                    <select id="nomination">
-                        <option value="">Nomination</option>
-                    </select><br>
-                </form>
+                <select id="oscars" name="oscars">
+                    <option value="">Oscars</option>
+                </select><br>
+                <select id="nomination" name="nomination">
+                    <option value="">Nominations</option>
+                </select><br>
+ 
+                <input type="checkbox" id="nominated" name="nominated">
+                <label for="checkbox"> Nominated</label>
+
+                <input type="checkbox" id="winner" name="winner">
+                <label for="checkbox"> Winner</label>
             </article>
     
             <article id=container4>
-                <form>
-                    <select id="oscars">
-                        <option value="">Oscars</option>
-                    </select><br>
-                    <input type="text" id="title" class="field left" readonly><br>
-                </form>
-            </article>-->
+                <select id="starring" name="starring">
+                    <option value="">Starring</option>
+                </select>
+                <input type="text" id="actor" name="actor" class="field left" placeholder="Actor" readonly><br>
+                <input type="image" src="/images/icons/mas.png" id="add" width="30" height="30"/>    
+                <input type="image" src="/images/icons/menos.png" id="minus" width="30" height="30"/>    
+            </article>
+            <button type="submit" name="add_cart" id="add_cart">Add</button>    
+            <button type="submit" name="modify" id="modify">Modify</button>    
+            <button type="submit" name="delete" id="delete">Delete</button>    
+        </form> 
+    </div>
 </body>
 </html>
