--- a/public/css/add_movie.css
+++ b/public/css/add_movie.css
@@ -36,11 +36,15 @@ div.contenedor{
     text-align: center;
 }
 
-#container1{
-    float:left; width: 30%;
-    height: 130px;
-    margin-left: 100px;
+#img{
     margin-right: 30px;
+}
+
+#container1{
+    float:left; width: 40%;
+    height: 130px;
+    margin-left: 40px;
+    margin-right: 60px;
     background:#2a628f;
     border-style:solid;
     border-radius: 25px;
@@ -50,16 +54,17 @@ div.contenedor{
 }
 
 #container2{
-    float: left; width:50%;
+    float: left; width:30%;
     height: 100px;
     text-align:left;
     color:black;
+    margin-bottom: 20px;
 }
 
 #container3{
-    float:left; width: 30%;
+    float:left; width: 40%;
     height: 130px;
-
+    margin-left: 40px;
     margin-right: 30px;
     background:#2a628f;
     border-style:solid;
@@ -72,7 +77,6 @@ div.contenedor{
 #container4{
     float:left; width: 40%;
     height: 130px;
-    margin-left: 20px;
     background:#2a628f;
     border-style:solid;
     border-radius: 25px;
@@ -82,18 +86,31 @@ div.contenedor{
 }
 
 select{
-    margin-top: 20px;
-    width: 186px;
+    margin-top: 10px;
+    width: 200px;
     height: 27px;
+    font-size: 13px;
+    border-style: solid;
+    border-color: black;
+    font-family: BalsamiqSansBold;
 }
 
 #title{
     background-color: #aa4465;
     color: white;
     text-align: center;
-    width: 186px;
+    width: 200px;
     height: 27px;
     margin-top: 10px;
+    font-size: 13px;
+    border-style: solid;
+    border-color: black;
+    font-family: BalsamiqSansBold;
+}
+
+#add{
+    margin-left: 10px;
+    margin-top: 5px;
 }
 
 #year{
@@ -103,6 +120,10 @@ select{
     width: 200px;
     height: 27px;
     margin-bottom: 10px;
+    font-size: 13px;
+    border-style: solid;
+    border-color: black;
+    font-family: BalsamiqSansBold;
 }
 
 #duration{
@@ -112,6 +133,10 @@ select{
     width: 200px;
     height: 27px;
     margin-bottom: 10px;
+    font-size: 13px;
+    border-style: solid;
+    border-color: black;
+    font-family: BalsamiqSansBold;
 }
 
 #unit_price{
@@ -121,9 +146,52 @@ select{
     width: 200px;
     height: 27px;
     margin-bottom: 10px;
+    font-size: 13px;
+    border-style: solid;
+    border-color: black;
+    font-family: BalsamiqSansBold;
 }
 
+#nomination{
+    margin-bottom: 20px;
+    font-size: 13px;
+    border-style: solid;
+    border-color: black;
+    font-family: BalsamiqSansBold;
+}
 
+#starring{
+    width: 200px;
+    height: 27px;       
+    font-size: 13px;
+    border-style: solid;
+    border-color: black;
+    font-family: BalsamiqSansBold;
+}
 
+#actor{
+    margin-top: 10px;
+    width: 200px;
+    height: 27px;
+    font-size: 13px;
+    border-style: solid;
+    border-color: black;
+    font-family: BalsamiqSansBold;   
+}
 
+button{
+    width: 400px;
+    height: 35px;
+    color: white;
+    border-style: solid;
+    border-color: black;    
+    background-color: #3d9796;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    margin-right: 200px;
+    font-size: 13px;
+    padding-left: 5px;
+    box-shadow: 5px 5px #000000;
+    font-family: BalsamiqSansBold;
+}
 
