--- a/public/css/edit_movie.css
+++ b/public/css/edit_movie.css
@@ -26,12 +26,203 @@ body {
 }
 
 div.contenedor{
-    float: left; width: 18%;
-    height: 430px;
-    margin-top: 40px;
-    margin-left: 600px;
+    float: left; width: 45%;
+    height: 500px;
+    margin-left: 400px;
     border-color: #f2edbe;
     border-style:solid;
     background-color: #2a628f;
+    opacity: 80%;
     text-align: center;
+}
+
+#img{
+    margin-right: 30px;
+}
+
+#container1{
+    float:left; width: 40%;
+    height: 130px;
+    margin-left: 40px;
+    margin-right: 60px;
+    background:#2a628f;
+    border-style:solid;
+    border-radius: 25px;
+    border-color: black;
+    text-align:center;
+    margin-bottom: 20px;
+}
+
+#container2{
+    float: left; width:30%;
+    height: 100px;
+    text-align:left;
+    color:black;
+    margin-bottom: 20px;
+}
+
+#container3{
+    float:left; width: 40%;
+    height: 130px;
+    margin-left: 40px;
+    margin-right: 30px;
+    background:#2a628f;
+    border-style:solid;
+    border-radius: 25px;
+    border-color: black;
+    text-align:center;
+    margin-bottom: 20px;
+}
+
+#container4{
+    float:left; width: 40%;
+    height: 130px;
+    background:#2a628f;
+    border-style:solid;
+    border-radius: 25px;
+    border-color: black;
+    text-align:center;
+    margin-bottom: 20px;
+}
+
+select{
+    margin-top: 10px;
+    width: 200px;
+    height: 27px;
+    font-size: 13px;
+    border-style: solid;
+    border-color: black;
+    font-family: BalsamiqSansBold;
+}
+
+#title{
+    background-color: #aa4465;
+    color: white;
+    text-align: center;
+    width: 200px;
+    height: 27px;
+    margin-top: 10px;
+    font-size: 13px;
+    border-style: solid;
+    border-color: black;
+    font-family: BalsamiqSansBold;
+}
+
+#add{
+    margin-left: 10px;
+    margin-top: 5px;
+}
+
+#year{
+    background-color: #f2edbe;  
+    color: black;
+    text-align: center;
+    width: 200px;
+    height: 27px;
+    margin-bottom: 10px;
+    font-size: 13px;
+    border-style: solid;
+    border-color: black;
+    font-family: BalsamiqSansBold;
+}
+
+#duration{
+    background-color: #eafdf8;
+    color: black;
+    text-align: center;
+    width: 200px;
+    height: 27px;
+    margin-bottom: 10px;
+    font-size: 13px;
+    border-style: solid;
+    border-color: black;
+    font-family: BalsamiqSansBold;
+}
+
+#unit_price{
+    background-color: #30323d;
+    color:white;
+    text-align: center;
+    width: 200px;
+    height: 27px;
+    margin-bottom: 10px;
+    font-size: 13px;
+    border-style: solid;
+    border-color: black;
+    font-family: BalsamiqSansBold;
+}
+
+#nomination{
+    margin-bottom: 20px;
+    font-size: 13px;
+    border-style: solid;
+    border-color: black;
+    font-family: BalsamiqSansBold;
+}
+
+#starring{
+    width: 200px;
+    height: 27px;       
+    font-size: 13px;
+    border-style: solid;
+    border-color: black;
+    font-family: BalsamiqSansBold;
+}
+
+#actor{
+    margin-top: 10px;
+    width: 200px;
+    height: 27px;
+    font-size: 13px;
+    border-style: solid;
+    border-color: black;
+    font-family: BalsamiqSansBold;   
+}
+
+#add_cart{
+    width: 200px;
+    height: 35px;
+    color: white;
+    border-style: solid;
+    border-color: black;    
+    background-color: #3d9796;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    margin-right: 200px;
+    font-size: 13px;
+    padding-left: 5px;
+    box-shadow: 5px 5px #000000;
+    font-family: BalsamiqSansBold;
+}
+
+#modify{
+    width: 140px;
+    height: 35px;
+    color: white;
+    border-style: solid;
+    border-color: black;    
+    background-color: #f2edbe;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    margin-right: 200px;
+    font-size: 13px;
+    padding-left: 5px;
+    box-shadow: 5px 5px #000000;
+    font-family: BalsamiqSansBold;
+}
+
+#remove{
+    width: 140px;
+    height: 35px;
+    color: white;
+    border-style: solid;
+    border-color: black;    
+    background-color: #f2edbe;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    margin-right: 200px;
+    font-size: 13px;
+    padding-left: 5px;
+    box-shadow: 5px 5px red (cf2a27);
+    font-family: BalsamiqSansBold;
 }
