--- a/views/sign_up.ejs
+++ b/views/sign_up.ejs
@@ -3,9 +3,38 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="/css/sign_up.css" type="text/css">
+    <style>
+    .alert {
+        padding: 20px;
+        background-color: #f2edbe;
+        color: black;
+    }
+
+    .closebtn {
+        margin-left: 15px;
+        color: black;
+        font-weight: bold;
+        float: right;
+        font-size: 22px;
+        line-height: 20px;
+        cursor: pointer;
+        transition: 0.3s;
+    }
+
+    .closebtn:hover {
+        color: black;
+    }
+    </style>
 </head>
 
 <body>
+    <% if (message) { %>
+        <div class="alert">
+            <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
+            <h2><%= message %></h2>
+        </div>
+    <% } %>
+
     <article id="column1">
         <img src="/images/titles/retro_club.jpg" width="330" height="75">
         <h2>
@@ -21,6 +50,8 @@
             <input type="text" name="username" placeholder="Username"><br>
             <input type="password" name="password" placeholder="Password"><br><br>
             <button type="submit">Sign in</button>
+
+
         </form> 
     </article>  
 </body>
